# KanopiLearningCPPLessons

./: .gitignore  2.10Oppie1FuncWMltiplPrmtrsJNts.cpp  2.2OpiePrntOnSrn.cpp  AccountLedger.cpp  AccountLedger.h  BankAccount.cpp  BankAccount.h  cpp-practice-2026-04-15.h  cpp-practice-2026-05-23.md  cpp-practice-2026-05-27.cpp  cpp-practice-2026-05-29.cpp  cpp-practice-2026-05-29.h  cpp-practice-2026-05-29.md  cpp-practice-2026-05-30.cpp  cpp-practice-2026-05-30.md  cpp-practice-2026-06-01.cpp  cpp-practice-2026-06-01.md  cpp-practice-2026-06-04-smartpointers.cpp  cpp-practice-2026-06-04-smartpointers.md  cpp-practice-2026-06-04.cpp  cpp-practice-2026-06-04.md  cpp-practice-2026-06-06  cpp-practice-2026-06-06.cpp  cpp-practice-2026-06-06.md
2026-06-07/: cpp-practice-2026-06-07  cpp-practice-2026-06-07.cpp  cpp-practice-2026-06-07.md
2026-06-08/: cpp-practice-2026-06-08  cpp-practice-2026-06-08-asan  cpp-practice-2026-06-08.cpp  cpp-practice-2026-06-08.md
cpp-daily-practiced/: cpp-practice-2026-04-15.cpp  cpp-practice-2026-04-15_Student.cpp
cpp-projects/: README.md
cpp_executables/: cpp-practice-2026-04-19  cpp-practice-2026-04-23
cpp_practice/: cpp-practice-2026-04-26  cpp-practice-2026-04-29  cpp-practice-2026-04-29.cpp  cpp-practice-2026-05-01.cpp
cpp_practiced/: cpp-practice-2026-04-13.md
direction-checkins/: direction-checkin-2026-04-30.md
late-may/cpp_practice/: 2026-06-09.cpp  2026-06-09.md  CMakeLists.txt  Makefile  Makefile.extern_template  P-2026-06-10-std-variant-visit.cpp  P-2026-06-10-std-variant-visit.md  P-2026-06-11-std-expected.cpp  P-2026-06-11-std-expected.md  P-2026-06-12-stdmove-if-noexcept.cpp  P-2026-06-12-stdmove-if-noexcept.md  P-2026-06-13-enable-shared-from-this.cpp  P-2026-06-13-enable-shared-from-this.md  P-2026-06-14-std-span-by-hand.cpp  P-2026-06-14-std-span-by-hand.md  P-2026-06-15-stdvisit-stateful-visitors.cpp  P-2026-06-15-stdvisit-stateful-visitors.md  P-2026-06-16-inventory-multi-file.cpp  P-2026-06-16-inventory-multi-file.md  P-2026-06-17-pimpl.cpp  P-2026-06-17-pimpl.md  P-2026-06-18-pimpl-inventory.cpp  P-2026-06-18-pimpl-inventory.md  P-2026-06-19-pimpl-virtual-functions.cpp  P-2026-06-19-pimpl-virtual-functions.md  P-2026-06-20-visitor-pattern.cpp  P-2026-06-20-visitor-pattern.md  P-2026-06-21-variant-vs-polymorphism.cpp  P-2026-06-21-variant-vs-polymorphism.md  P-2026-06-22-crtp-static-visitor.cpp  P-2026-06-22-crtp-static-visitor.md  P-2026-06-23-crtp-variant-hybrid.cpp  P-2026-06-23-crtp-variant-hybrid.md  P-2026-06-24-pimpl-abi-stability.cpp  P-2026-06-24-pimpl-abi-stability.md  P-2026-06-25-pimpl-shared-ptr-impl.cpp  P-2026-06-25-pimpl-shared-ptr-impl.md  P-2026-06-26-acyclic-visitor.cpp  P-2026-06-26-acyclic-visitor.md  P-2026-06-27-cmake-build.cpp  (+40 more)
late-may/cpp_practice/cpack_consumer/: CMakeLists.txt  P-2026-07-03-cpack-package-and-install-from-archive.cpp  P-2026-07-03-cpack-package-and-install-from-archive.md
late-may/cpp_practice/cpack_resource_consumer/: CMakeLists.txt  P-2026-07-04-cpack-resource-files.cpp  P-2026-07-04-cpack-resource-files.md
late-may/cpp_practice/fmt_consumer/: CMakeLists.txt  P-2026-07-02-fmt-find-package.cpp  P-2026-07-02-fmt-find-package.md
late-may/cpp_practice/mdspan_custom_accessors/: P-2026-07-11-mdspan-custom-accessors.cpp  P-2026-07-11-mdspan-custom-accessors.md
late-may/cpp_practice/multi_os_matrix/: P-2026-07-08-multi-os-release-matrix.cpp  P-2026-07-08-multi-os-release-matrix.md  release_matrix.yml  release_matrix_broken_fixture.yml
late-may/cpp_practice/psp_consumer_installed/: CMakeLists.txt  P-2026-07-01-cmake-install-find-package.cpp
late-may/cpp_practice/psp_json_arrays_nested/: CMakeLists.txt  P-2026-07-19-psp-json-arrays-nested.cpp  P-2026-07-19-psp-json-arrays-nested.md
late-may/cpp_practice/psp_json_header/: CMakeLists.txt  P-2026-07-20-psp-json-header.cpp  P-2026-07-20-psp-json-header.md
late-may/cpp_practice/psp_json_patch/: CMakeLists.txt  P-2026-07-22-psp-json-patch.cpp  P-2026-07-22-psp-json-patch.md
late-may/cpp_practice/psp_json_patch_parser/: CMakeLists.txt  P-2026-07-23-psp-json-patch-parser.cpp  P-2026-07-23-psp-json-patch-parser.md
late-may/cpp_practice/psp_json_patch_serialiser/: CMakeLists.txt  P-2026-07-24-psp-json-patch-serialiser.cpp  P-2026-07-24-psp-json-patch-serialiser.md
late-may/cpp_practice/psp_json_pointer/: CMakeLists.txt  P-2026-07-21-psp-json-pointer.cpp  P-2026-07-21-psp-json-pointer.md
late-may/cpp_practice/psp_json_scalars/: CMakeLists.txt  P-2026-07-18-psp-json-scalars.cpp  P-2026-07-18-psp-json-scalars.md
late-may/cpp_practice/psp_parser_cursor_primitives/: CMakeLists.txt  P-2026-07-16-psp-parser-cursor-primitives.cpp  P-2026-07-16-psp-parser-cursor-primitives.md
late-may/cpp_practice/psp_parser_expected/: P-2026-07-13-psp-parser-expected.cpp  P-2026-07-13-psp-parser-expected.md
late-may/cpp_practice/psp_parser_header/: CMakeLists.txt  P-2026-07-14-psp-parser-header.cpp  P-2026-07-14-psp-parser-header.md
late-may/cpp_practice/psp_parser_streaming/: CMakeLists.txt  P-2026-07-15-psp-parser-streaming-cursor.cpp  P-2026-07-15-psp-parser-streaming-cursor.md
late-may/cpp_practice/psp_span/: README.md  span.h
late-may/cpp_practice/psp_span_lib/: CMakeLists.txt  License.txt  README.md  Readme.txt  psp_span_libConfig.cmake.in
late-may/cpp_practice/psp_span_lib/include/psp_span/: json.h  json_ext.h  parser.h  span.h
late-may/cpp_practice/psp_span_lib/src/: psp_span_inst.cpp
late-may/cpp_practice/release_publish/: CMakeLists.txt  P-2026-07-05-github-release-publish.cpp  P-2026-07-05-github-release-publish.md
late-may/cpp_practice/release_workflow/: P-2026-07-06-github-actions-release-workflow.cpp  P-2026-07-06-github-actions-release-workflow.md  release.yml  release_broken_fixture.yml
late-may/cpp_practice/std_expected_cpp23/: P-2026-07-12-std-expected-cpp23.cpp  P-2026-07-12-std-expected-cpp23.md
late-may/cpp_practice/std_mdspan_cpp23/: P-2026-07-10-std-mdspan-cpp23.cpp  P-2026-07-10-std-mdspan-cpp23.md
late-may/cpp_practice/std_span_cpp20/: P-2026-07-09-std-span-cpp20.cpp  P-2026-07-09-std-span-cpp20.md
(+200 files in other folders)
